# cable

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  LICENSE-MS-PL  Makefile.toml  README-ko.md  README.md  Vagrantfile  _check_ascii.ps1  index.html  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: rust-audit.agent.md
.github/prompts/: audio_driver_spec.md.prompt.md
.github/workflows/: release.yml  test.yml
.opencode/plans/: implementation-plan.md
.storybook/: decorators.tsx  main.ts  preview.ts  tauri-mock.ts
.vm/: .gitignore  exec.ps1  launch.ps1  setup-host-winrm.ps1  setup.ps1  test.ps1  vm-exec.ps1  vm-install.ps1
.vm/test/: common.ps1  (+13 more)
crates/driver/: Cargo.toml  Makefile.toml  build.rs  cable_driver.inx  driver.inx
crates/driver/src/: lib.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/src/: driver_client.rs  headless.rs  lib.rs  main.rs  runtime.rs  vst3_common.rs
crates/tauri/src/bluetooth/: airpods.rs  mod.rs  watcher.rs  win.rs
crates/tauri/src/driver/: client.rs  commands.rs  endpoint.rs  mod.rs  types.rs
crates/tauri/src/nodes/: app_audio_capture.rs  audio_input_device.rs  audio_output_device.rs  channel_merge.rs  channel_split.rs  compressor.rs  delay.rs  echo.rs  gain.rs  mixer.rs  mod.rs  reverb.rs  shared_store.rs  spectrum_analyzer.rs  virtual_audio_input.rs  virtual_audio_output.rs  vst.rs  vst3_com.rs  vst_node.rs  waveform_monitor.rs
docs/: adding-a-node.md  architecture.md  driver-hardening.md  endpoint-naming.md  known-issues.md  nodes.md  virtual-driver.md
driver/: .clangd  README.md  build.bat
scripts/: attach-vm-debugger.ps1  build.ps1  capture-stories.mjs  create-test-cert.ps1  launch-vm.sh  make-readme-diagram.ps1  mcp.mjs  measure-handles.mjs  package-driver.ps1
src/: App.css  App.tsx  index.css  ipc.d.ts  node-definition.ts  settings.ts  state.test.ts  state.ts  types.ts
tools/vst-inspect/: Cargo.toml
tools/vst-inspect/src/: main.rs  test_u.rs  test_v.rs  test_w.rs  test_x.rs  test_x2.rs  test_y.rs  test_z.rs
virtual-driver/: build.bat
(+116 files in other folders)
